tests/grammar/snapshots/r#mod__grammar__alpha035__just_dollar.snap
---
source: tests/grammar/alpha035.rs
expression: "compiler.tokenize(\"$\")"
---
[
    (
        Token(
            "$",
        ),
        0..1,
    ),
]
